# tuw-master-thesis

./: .gitignore  Pipfile  README.md  llama-dl.sh  pyproject.toml  requirements.txt
encoding/: encode.py  test.py  theory.lp
encoding/clevr/: example1.lp  example2.lp  example3.lp  theory.lp
encoding/gqa/: encode.py  sample_question_extraction.ipynb  test.py  theory.lp
graphics/: clip_finetune_loss.R  clip_finetune_training_loss.csv  clip_finetune_validation_loss.csv  runtime_histogram.R  semantic_similarity_histogram.R  testdev_base_clipbase_owllarge.csv  testdev_base_clipbase_owllarge_open.csv
notebooks/: clip.ipynb  contrastive_evaluator.py  evaluation.ipynb  evaluation_results.ipynb  evaluator.py  finetuning.ipynb  mlm_for_relations.ipynb  pipeline_experiments.ipynb  prompt_dataset.py  prompt_engineering.ipynb  reload_recursive.py  sample_question_extraction.ipynb  vqa.ipynb
notebooks/evaluations/testdev_base_clipbase_owllarge/: history.json  results_snapshot.pkl
notebooks/evaluator/: __init__.py  contrastive_evaluator.py  evaluator.py
notebooks/model/: config_xvlm_itr_coco.yaml  vipergpt_xvlm_model.py  xvlm_itr_coco_model.py
notebooks/models/: base_model.py  blip_model.py  clip_model.py  xvlm_model.py
src/: perplexity.py
src/model/: blip_model.py  bloom_model.py  clip_model.py  gpt2_model.py  gpt_neo_model.py  language_model.py  llama_model.py  opt_model.py  vipergpt_xvlm_model.py  vision_language_model.py  xvlm_itr_coco_model.py
src/object_detection/: object_detector.py  owl_vit_object_detector.py
src/pipeline/: bounding_box_optimization.py  concept_extraction.py
src/pipeline/encoding/: __init__.py  (+6 more)
(+11 files in other folders)
